--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -1,5 +1,5 @@
-- make this project work with pytconf.
-- move to contacts api instead of people API.
-- get to listing contact with a constant key.
-	there seems to be an option to create a key that will always work.
-- get all fields for every contact.
+- check to implement: check that everyone who is really a contact
+	is a member of some group.
+- check to implement: check that every contact is either has a name
+	or a company with either a job description or department.
+- add a google map link to where every company is ?!?
