--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -1,4 +1,4 @@
-- move to the new python API as per the
+- move to the new python API from the gdata- API we use now.
 	https://stackoverflow.com/questions/9969204/different-python-google-apis
 	document.
 	also document these issues somewhere.
